Add pagination and loading

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -2,15 +2,16 @@
   box-sizing: border-box;
   margin: 0 auto;
   font-family: 'Inter', Arial, sans-serif;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .Header {
   height: 80px;
-  background-color: #FFFFFF; 
+  background-color: #ffffff;
 }
 
 .Main {
-  width: 1366px;
+  width: 960px;
+  margin: 0 auto;
   padding: 25px 0;
 }
