--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -1,55 +1,55 @@
 .Article {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    padding: 15px 20px 25px;
-    background-color: #FFFFFF;
-    border-radius: 5px;;
-    box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .Article__Left {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .Article__TitleWrapper {
-    display: flex;
-    margin-bottom: 10px;
-  }
-  
-  .Article__Right {
-    width: 30%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: flex-end;
-  }
-  
-  .Article__Title {
-    margin: 0;
-    margin-right: 10px;
-    padding: 0;
-    font-size: 20px;
-    font-weight: normal;
-    line-height: 28px;
-  }
-  
-  .Article__Link {
-    text-decoration: none;
-    color: #1890FF;
-  }
-  
-  .Article__Content {
-    margin: 0;
-    margin-top: 10px;
-    padding: 0;
-  }
-  
-  .Article__UserInfo {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    margin-right: 10px;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  padding: 15px 20px 25px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+.Article__Left {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Article__TitleWrapper {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.Article__Right {
+  width: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: flex-end;
+}
+
+.Article__Title {
+  margin: 0;
+  margin-right: 10px;
+  padding: 0;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 28px;
+}
+
+.Article__Link {
+  text-decoration: none;
+  color: #1890ff;
+}
+
+.Article__Content {
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.Article__UserInfo {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-right: 10px;
+}
