--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,12 @@
 @font-face {
   font-family: 'Inter';
-  src: url('./fonts/Inter-Regular.woff2') format('woff2'),
-       url('./fonts/Inter-Regular.woff') format('woff');
+  src: url('./fonts/Inter-Regular.woff2') format('woff2'), url('./fonts/Inter-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   margin: 0;
   padding: 0;
 }
