--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,5 +1,6 @@
 .App {
   box-sizing: border-box;
+  min-height: 100vh;
   margin: 0 auto;
   font-family: 'Inter', Arial, sans-serif;
   background-color: #e5e5e5;
