Add SignIn and SignUp

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,22 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter-Regular';
   src: url('./fonts/Inter-Regular.woff2') format('woff2'), url('./fonts/Inter-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-Regular';
+  src: url('./fonts/Roboto-Regular.woff2') format('woff2'),
+       url('./fonts/Roboto-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-Medium';
+  src: url('./fonts/Roboto-Medium.woff2') format('woff2'),
+       url('./fonts/Roboto-Medium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
