--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,39 +4,40 @@
   padding: 20px 20px 15px;
   font-size: 18px;
   line-height: 28px;
-  background-color: #FFFFFF; 
+  background-color: #ffffff;
 }
-  
+
 .Header__Title {
   margin: 0;
   padding: 0;
 }
-  
+
 .Header__TitleLink {
-  padding-top: 5px;
   font-size: 18px;
   line-height: 28px;
   color: #000000;
 }
-  
+
 .Header__SignIn {
   margin-left: auto;
   margin-right: 20px;
+ 
 }
-  
+
 .Header__SignIn,
 .Header__SignUp {
-  padding: 5px 10px;
+  padding: 5px 10px; 
+  color: #000000;
 }
-  
+
 .Header__SignIn:active,
 .Header__SignUp:active {
-  color: #52C41A;
-  border: 1px solid #52C41A;
+  color: #52c41a;
+  border: 1px solid #52c41a;
   border-radius: 5px;
 }
 
 .Header__SignIn:hover,
 .Header__SignUp:hover {
-  color: #52C41A;
+  color: #52c41a;
 }
