Refactoring of the header

--- a/src/components/SignIn/SignIn.module.scss
+++ b/src/components/SignIn/SignIn.module.scss
@@ -8,21 +8,19 @@
   font-style: normal;
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 
-            0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198), 
-            0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 
-            0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035), 
-            0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 
-            0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
 }
 
 .SignIn__Title {
   font-family: 'Roboto-Medium', 'Segoe UI', sans-serif;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
   text-align: center;
 }
-  
+
 input.SignIn__Input {
   margin-bottom: 20px;
   padding-top: 10px;
@@ -30,7 +28,7 @@ input.SignIn__Input {
   font-size: 14px;
   line-height: 22px;
 }
-  
+
 button.SignIn__Submit {
   width: 100%;
   height: 45px;
@@ -39,10 +37,10 @@ button.SignIn__Submit {
   font-size: 16px;
   line-height: 24px;
 }
-  
+
 .SignIn__Question {
   margin: 0;
   padding: 0;
-  color:#8C8C8C;
+  color: #8c8c8c;
   text-align: center;
-} 
+}
