--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,5 @@
 .Header {
   display: flex;
-  justify-content: space-between;
   padding: 20px 20px 15px;
   font-size: 18px;
   line-height: 28px;
@@ -18,15 +17,73 @@
   color: #000000;
 }
 
-.Header__SignIn {
-  margin-left: auto;
-  margin-right: 20px;
- 
+.Header__LoggedOut,
+.Header__LoggedIn {
+ display: flex;
+ align-items: baseline;
+ margin-left: auto;
 }
 
-.Header__SignIn,
+.Header__LoggedOut {
+  align-items: flex-end;
+}
+
+.Header__UserInfo {
+  display: flex;
+  align-items: flex-end;
+  margin-right: 25px;
+}
+
+.Header__Username {
+  color: #000000;
+  margin-right: 10px;
+}
+
+.Header__CreateArticle {
+  margin-right: 20px;
+  padding: 3px 5px;
+  font-size: 16px;
+  color: #000000;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.Header__CreateArticle:active,
+.Header__CreateArticle:hover {
+  color: #52C41A;
+  border: 1px solid #52C41A;
+}
+
+.Header__Avatar {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+}
+
+.Header__LogOut {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 5px 10px;
+
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  outline: none;
+}
+
+.Header__LogOut:active,
+.Header__LogOut:hover,
+.Header__Username:active,
+.Header__Username:hover {
+  color: #52C41A;
+}
+
+.Header__SignIn {
+  margin-right: 20px;
+  color: #000000;
+}
+
 .Header__SignUp {
-  padding: 5px 10px; 
   color: #000000;
 }
 
