--- a/src/components/SignUp/SignUp.module.scss
+++ b/src/components/SignUp/SignUp.module.scss
@@ -8,21 +8,19 @@
   font-style: normal;
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 
-                0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198), 
-                0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 
-                0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035), 
-                0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 
-                0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
 }
-  
+
 .SignUp__Title {
   font-family: 'Roboto-Medium', 'Segoe UI', sans-serif;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
   text-align: center;
 }
-  
+
 input.SignUp__Input {
   margin-bottom: 20px;
   padding-top: 10px;
@@ -33,16 +31,29 @@ input.SignUp__Input {
 
 .SignUp__Label {
   display: flex;
+  margin-top: 10px;
   margin-bottom: 10px;
   color: #595959;
 }
-  
+
 input.SignUp__Checkbox {
+  position: relative;
   width: auto;
   margin-top: 5px;
   margin-right: 10px;
 }
-  
+
+input.SignUp__Checkbox::before {
+  content: '';
+  position: absolute;
+  width: 325px;
+  height: 1px;
+  left: 0px;
+  bottom: 20px;
+  background-color: #E8E8E8;
+  margin-bottom: 10px;
+}
+
 button.SignUp__Submit {
   width: 100%;
   height: 45px;
@@ -51,10 +62,10 @@ button.SignUp__Submit {
   font-size: 16px;
   line-height: 24px;
 }
-  
+
 .SignUp__Question {
   margin: 0;
   padding: 0;
-  color:#8C8C8C;
+  color: #8c8c8c;
   text-align: center;
 }
