--- a/src/index.scss
+++ b/src/index.scss
@@ -7,16 +7,14 @@
 
 @font-face {
   font-family: 'Roboto-Regular';
-  src: url('./fonts/Roboto-Regular.woff2') format('woff2'),
-       url('./fonts/Roboto-Regular.woff') format('woff');
+  src: url('./fonts/Roboto-Regular.woff2') format('woff2'), url('./fonts/Roboto-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto-Medium';
-  src: url('./fonts/Roboto-Medium.woff2') format('woff2'),
-       url('./fonts/Roboto-Medium.woff') format('woff');
+  src: url('./fonts/Roboto-Medium.woff2') format('woff2'), url('./fonts/Roboto-Medium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
