--- a/src/components/SignUp/SignUp.module.scss
+++ b/src/components/SignUp/SignUp.module.scss
@@ -50,7 +50,7 @@ input.SignUp__Checkbox::before {
   height: 1px;
   left: 0px;
   bottom: 20px;
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
   margin-bottom: 10px;
 }
 
