Client validation of the sign up form

--- a/src/components/SignUp/SignUp.module.scss
+++ b/src/components/SignUp/SignUp.module.scss
@@ -21,18 +21,13 @@
   text-align: center;
 }
 
-input.SignUp__Input {
+.SignUp__Agreement {
   margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-size: 14px;
-  line-height: 22px;
 }
 
 .SignUp__Label {
   display: flex;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 30px;
   color: #595959;
 }
 
