--- a/src/components/EditProfile/EditProfile.module.scss
+++ b/src/components/EditProfile/EditProfile.module.scss
@@ -8,21 +8,18 @@
   font-style: normal;
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 
-                0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198), 
-                0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 
-                0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035), 
-                0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 
-                0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
 }
-  
+
 .Profile__Title {
   font-family: 'Roboto-Medium', 'Segoe UI', sans-serif;
   font-weight: 500;
   font-style: normal;
   text-align: center;
 }
-  
+
 input.Profile__Input {
   margin-bottom: 20px;
   padding-top: 10px;
@@ -30,7 +27,7 @@ input.Profile__Input {
   font-size: 14px;
   line-height: 22px;
 }
-  
+
 button.Profile__Submit {
   width: 100%;
   height: 45px;
