--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,7 +20,7 @@
 .Header__LoggedOut,
 .Header__LoggedIn {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   margin-left: auto;
 }
 
@@ -67,15 +67,21 @@
 
   border: none;
   background-color: transparent;
+  border: 1px solid #000000;
+  border-radius: 5px;
   cursor: pointer;
   outline: none;
 }
 
-.Header__LogOut:active,
-.Header__LogOut:hover,
 .Header__Username:active,
 .Header__Username:hover {
   color: #52c41a;
+}
+
+.Header__LogOut:active,
+.Header__LogOut:hover {
+  color: #52c41a;
+  border: 1px solid #52c41a;
 }
 
 .Header__SignIn {
