Get current user

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,7 +20,7 @@
 .Header__LoggedOut,
 .Header__LoggedIn {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   margin-left: auto;
 }
 
