Styles for NewArticle

--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -97,19 +97,19 @@
 
 button.Article__Delete {
   margin-right: 20px;
-  background-color: #FFFFFF;
-  color: #F5222D;
-  border-color: #F5222D;
+  background-color: #ffffff;
+  color: #f5222d;
+  border-color: #f5222d;
 }
 
 button.Article__Edit {
-  background-color: #FFFFFF;
-  color: #52C41A;
-  border-color: #52C41A;
+  background-color: #ffffff;
+  color: #52c41a;
+  border-color: #52c41a;
 }
 
 button.Article__Edit:hover {
-  background-color: #52C41A;
+  background-color: #52c41a;
 }
 
 .Article__Content {
