--- a/src/components/NewArticle/NewArticle.module.scss
+++ b/src/components/NewArticle/NewArticle.module.scss
@@ -1,21 +1,18 @@
 .NewArticle {
-    position: relative;
-    padding: 50px 30px 120px;
-    font-family: 'Roboto', 'Arial', sans-serif;
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 
-    0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198), 
-    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 
-    0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035), 
-    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 
-    0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
-  }
-  
-  .NewArticle__Title {
-    margin: 0;
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: bold;
-    text-align: center;
-  }
+  position: relative;
+  padding: 50px 30px 120px;
+  font-family: 'Roboto', 'Arial', sans-serif;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+}
+
+.NewArticle__Title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: bold;
+  text-align: center;
+}
