--- a/src/components/TagForm/TagForm.module.scss
+++ b/src/components/TagForm/TagForm.module.scss
@@ -5,13 +5,13 @@
   flex-wrap: wrap;
   margin-top: 50px;
 }
-  
+
 button.TagForm__Submit {
   display: flex;
   align-items: center;
   padding: 20px 25px;
-  color: #1890FF;
-  border-color: #1890FF;
+  color: #1890ff;
+  border-color: #1890ff;
   margin-left: 10px;
   margin-top: 23px;
 }
