--- a/src/components/TagList/TagList.module.scss
+++ b/src/components/TagList/TagList.module.scss
@@ -1,6 +1,6 @@
 .Tags__Title {
-    margin: 0;
-    font-size: 14px;
+  margin: 0;
+  font-size: 14px;
 }
 
 .Tags__List {
@@ -20,6 +20,6 @@
   padding: 10px;
   margin-right: 10px;
   box-sizing: border-box;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   cursor: pointer;
 }
