--- a/src/components/TagForm/TagForm.module.scss
+++ b/src/components/TagForm/TagForm.module.scss
@@ -1,17 +1,30 @@
 .TagForm {
-  width: 450px;
+  width: 430px;
   box-sizing: border-box;
   display: flex;
+  align-items: baseline;
   flex-wrap: wrap;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
-button.TagForm__Submit {
-  display: flex;
-  align-items: center;
-  padding: 20px 25px;
+.TagForm__Submit {
+  border: 1px solid #1890ff;
   color: #1890ff;
-  border-color: #1890ff;
+  font-size: 16px;
+  line-height: 24px;
+  box-sizing: border-box;
+  border-radius: 4px;
   margin-left: 10px;
-  margin-top: 23px;
+  background-color: #ffffff;
+  padding: 8px 30px; 
+  outline: none;
+}
+
+.TagForm__Submit:hover,
+.TagForm__Submit:active, 
+.TagForm__Submit:focus {
+  border: 1px solid darken(#1890ff, 15%);
+  color: darken(#1890ff, 15%);
+  border-radius: 4px;
+ 
 }
