--- a/src/components/SignUp/SignUp.module.scss
+++ b/src/components/SignUp/SignUp.module.scss
@@ -36,6 +36,7 @@ input.SignUp__Checkbox {
   width: auto;
   margin-top: 5px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 input.SignUp__Checkbox::before {
